header z-index in admin side fix

--- a/web/themes/custom/shopsPlus/scss/theme/_theme.scss
+++ b/web/themes/custom/shopsPlus/scss/theme/_theme.scss
@@ -8,6 +8,8 @@
   min-height: 75px;
   position: fixed;
   width: 100%;
+  z-index: 50;
+
   .container {
     max-width: 100%;
     padding: 0;
